Binary kernel dilation

--- a/env/index.html
+++ b/env/index.html
@@ -23,6 +23,9 @@
 	<button id="action" class="ui-button" onclick="start()">Start</button>
 	<button id="action" class="ui-button" onclick="stop()">Stop</button>
 
+	<!-- Here we just provide a noisy image for some testing things -->
+	<!-- <img id="balloons" src="img/balloons.png"/> -->
+
 	<!-- Here's our input canvas, which is used as an intermediary between our video and our wasm functions-->
 	<canvas id="input-canvas"></canvas>
 
