--- a/env/index.html
+++ b/env/index.html
@@ -23,8 +23,9 @@
 	<button id="action" class="ui-button" onclick="start()">Start</button>
 	<button id="action" class="ui-button" onclick="stop()">Stop</button>
 
-	<!-- Here we just provide a noisy image for some testing things -->
+	<!-- Here we can include some images for testing purposes or comment them out -->
 	<!-- <img id="balloons" src="img/balloons.png"/> -->
+	<!-- <img id="rectangle" src="img/blackRectangle.png"/> -->
 
 	<!-- Here's our input canvas, which is used as an intermediary between our video and our wasm functions-->
 	<canvas id="input-canvas"></canvas>
