Week 2 demo bug fix

--- a/demo/week3/index.html
+++ b/demo/week3/index.html
@@ -75,7 +75,7 @@
 			<p><input id="findSegments" type="checkbox" class="stack" name="segments">
 			<label for="findSegments">getConnectedComponents()</label></p>
 
-			<p><input disabled id="visualizeSegments" type="checkbox" class="stack-option" name="visualizeSegments">
+			<p><input disabled id="visualizeSegments" type="checkbox" class="stack-option" name="visualize-segments">
 			<label for="visualizeSegments">visualize labeled regions</label></p>
 
 			<p><input disabled id="findCentroids" type="checkbox" class="stack" name="centroids">
