--- a/demo/week3/index.html
+++ b/demo/week3/index.html
@@ -83,6 +83,15 @@
 
 		</div>
 
+		<div class="panel">
+
+			<p class="stack">interpretation</p>
+
+			<p><input id="findPerimeter" type="checkbox" class="stack" name="perimeter">
+			<label for="findPerimeter">getRegionPerimeter()</label></p>
+
+		</div>
+
 	</div>
 
 	<!-- Here's our input canvas, which is used as an intermediary between our video and our wasm functions-->
