--- a/demo/week3/index.html
+++ b/demo/week3/index.html
@@ -90,6 +90,9 @@
 			<p><input id="findPerimeter" type="checkbox" class="stack" name="perimeter">
 			<label for="findPerimeter">getRegionPerimeter()</label></p>
 
+			<p><input disabled id="findBoundingBox" type="checkbox" class="stack" name="bounding">
+			<label for="findBoundingBox">getBoundingBox()</label></p>
+
 		</div>
 
 	</div>
