--- a/week5/index.html
+++ b/week5/index.html
@@ -42,7 +42,7 @@
 			<label for="toGrayscale">toGrayscale()</label></p>
 
 			<p><input id="threshold" type="checkbox" class="stack" name="threshold">
-			<label for="threshold">threshold(t = 127)</label></p>
+			<label for="threshold">otsu()</label></p>
 
 			<p><input id="median3x3" type="checkbox" class="stack" name="median">
 			<label for="median3x3">median3x3()</label></p>
